# tgbot-app

./: .gitignore  Cargo.toml  README.md  config-template.toml  deploy-dev.sh  deploy.sh  ssh_password.txt  test-dev.sh
.github/workflows/: deploy.yml  release.yaml  rust.yml
src/: callback_handler.rs  cron.rs  handler.rs  lib.rs  main.rs  start.rs  util.rs
src/ai/: chatgpt.rs  mod.rs
src/brute_force/: mod.rs  sha1_cracker.rs  ssh_brute.rs
src/download/: aria2c.rs  mod.rs  y_ytdl.rs  yt_dlp.rs  yt_dlp_audio.rs
src/osint/: dns.rs  ip.rs  mod.rs
src/server/: mod.rs  resend.rs
src/shell/: any_shell_command.rs  command.rs  ls.rs  mod.rs  ping.rs  shell_no_output.rs
