[package]
name = "tgbot-app"
version = "0.1.7"
edition = "2021"
authors = ["HZzz2", "Leslie", "hzzz2yb@gmail.com"]
# default-run = "tgbot-app"

[dependencies]
ferrisgram = "0.2.1"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
anyhow = { version = "1.0.89", default-features = false }
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "socks"] }
tokio = { version = "1.40.0", features = ["full"] }
rusty_ytdl = "0.7.4"
async-ssh2-tokio = "0.8.12"
async-channel = "2.3.1"
# anyhow = "1.0.86"
resend-rs = "0.9.1"

# [profile.release]
# lto = true   # 2024年7月27日 release size 24MB -> 19MB
# panic = "abort" # size 19MB -> 16MB
