[package]
name = "tgbot-app"
version = "0.2.0"
edition = "2021"
authors = ["HZzz2", "Leslie", "hzzz2yb@gmail.com"]
repository = "https://github.com/HZzz2/tgbot-app"
description = "Telegram Bot助手"
keywords = ["telegram", "bot", "assistant"]
# default-run = "tgbot-app"

[dependencies]
# Telegram Bot API
ferrisgram = "0.2.1"
serde_derive = "1.0.210"
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
# anyhow = "1.0.86"
anyhow = { version = "1.0.90", default-features = false }
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "socks"] }
tokio = { version = "1.40.0", features = ["full"] }
rusty_ytdl = "0.7.4"   # 目前无法下载油管
# ssh brute
async-ssh2-tokio = "0.8.12"
async-channel = "2.3.1"
# email send
resend-rs = "0.9.1"

# [profile.release]
# lto = true   # 2024年7月27日 release size 24MB -> 19MB
# panic = "abort" # size 19MB -> 16MB
