[package]
name = "tgbot-app"
version = "0.2.14"
edition = "2021"
authors = ["HZzz2", "Leslie", "hzzz2yb@gmail.com"]
repository = "https://github.com/HZzz2/tgbot-app"
description = "Telegram Bot助手"
keywords = ["Telegram", "bot", "assistant","telegram","TGBot"]
# default-run = "tgbot-app"

[dependencies]
# Telegram Bot API
ferrisgram = "0.2.1"
# log
tklog = "0.2.7"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
# anyhow = "1.0.86"
anyhow = { version = "1.0.97", default-features = false }
once_cell = "1.21.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "socks"] }
tokio = { version = "1.44.1", features = ["full"] }
# rusty_ytdl = "0.7.4"   # 目前无法下载油管
# ssh brute
async-ssh2-tokio = "0.8.14"
async-channel = "2.3.1"
# email send
resend-rs = "0.12.1"
tokio-cron-scheduler = "0.13.0"
chrono = "0.4.40"
chrono-tz = "0.10.3"


# [profile.release]
# lto = true   # 2024年7月27日 release size 24MB -> 19MB
# panic = "abort" # size 19MB -> 16MB
